--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,3 +22,5 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: yarn build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
